<resources>
    <string name="app_name">Morse Code</string>
    <string name="text_hey">Hey there! It is our Morse Code App.</string>
    <string name="text_main_send">You can send Morse code with your flashlight:</string>
    <string name="button_main_send">Send the code</string>
    <string name="text_main_receive">Also you can receive Morse code with your light sensor:</string>
    <string name="button_main_receive">Receive the code</string>
    <string name="text_send_message">Type your message here</string>
    <string name="button_send_startSending">Send message</string>
    <string name="button_send_stopSending">Stop sending</string>
    <string name="text_send_unitTime">Set one unit time:</string>
    <string name="text_receive_lightSensorText">Light sensor value:</string>
    <string name="text_receive_receivedMessageText">Received message:</string>
    <string name="button_receive_calibrate">Calibrate</string>
</resources>
