<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="moshch.morsecode.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hey"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:id="@+id/textView_hey" />

    <TextView
        android:text="@string/text_main_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/button_send"
        android:id="@+id/textView_receive" />

    <Button
        android:text="@string/button_main_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_receive"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textView_receive"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/button_main_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_send"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textView_send"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/textView_send"
        android:text="@string/text_main_send"
        android:layout_below="@+id/textView_hey"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
